fixed spacing in body and github link

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
+body{
+  display: flex;
+  justify-content: center;
 
+}
 h2 {
   text-align: center;
   font-weight: 200;
@@ -38,8 +42,7 @@ hr {
 }
 
 .weather-app{
-  display: flex;
-  justify-content: center;
+  
   margin: 75px;
   border: 1px solid black;
   border-radius: 4px;
